css/style.css
/* ... */
.work-gallery-row {
    padding: 0px 20px 0px 20px;
}

@media (max-width: 1024px) {
    .section-5-text {
        width: 75%;
    }
}

@media (max-width: 768px) {
    .section-5-text {
        font-size: 32px;
    }

    .sec5-icon {
        font-size: 70px;
    }
}

@media (max-width: 426px) {
    .section-5-text {
        font-size: 28px;
        line-height: 1.5;
        width: 90%;
    }

    .section-5-icon {
        margin: 10px 0px 10px 0px;
    }

    .sec5-icon {
        font-size: 50px;
    }

    .sec5-portfolio-head {
        font-size: 18px;
    }
}

@media (max-width: 320px) {
    .section-5 {
        padding: 30px 0px;
    }

    .section-5-text {
        font-size: 24px;
        line-height: 1.4;
        width: 95%;
    }

    .sec5-icon {
        font-size: 40px;
    }

    .sec5-portfolio-head {
        font-size: 14px;
    }

    .work-gallery-row {
        padding: 0px 10px 0px 10px;
    }
}

.mt-auto {
    margin-top: auto;
}

.sec5-btn {
    font-family: Roboto, sans-serif;
    color: #FFFFFF;
    background-color: #000000;
    letter-spacing: 2px;
    padding: 10px 30px;
    border: none;
    box-shadow: 3px 4px 2px rgba(0, 0, 0, 0.2);
    transition: all 0.5s ease;
}

.sec5-btn:hover {
    color: #000000;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
    transform: translateY(-5px);
}

.sec5-btn:active {
    transform: translateY(0px);
}

@media (max-width: 426px) {
    .sec5-btn {
        padding: 5px 18px;
        letter-spacing: 1px;
        font-size: 12px;
    }
}

@media (max-width: 320px) {
    .masonry .grid__body {
        padding: 20px 20px;
    }

    .masonry .grid__tag {
        font-size: 12px;
    }
}

@media (max-width: 320px) {
    .thing .grid__body {
        padding: 20px 20px;
    }

    .thing .grid__tag {
        font-size: 12px;
    }
}

@media (max-width: 320px) {
    .sec5-btn {
        padding: 5px 15px;
        font-size: 10px;
    }
}

/* Reordering elements for papers with the image on the left */
.left-img-container {
    display: flex;
    flex-direction: row;
}

/* condition for screen size minimum of 500px */
@media (max-width:1000px) {
    .left-img {
        padding-top: 50px;
        padding-bottom: 50px;
        order: 1;
    }
}

/* SECTION NO 6 */

.section-6 {
    padding: 70px 0px 100px 0px;
}

.section-6-inner {
    width: 90%;
    color: #000000;
}

.section-6-heading {
    font-size: 36px;
    font-weight: 300;
    line-height: 1.2;
}

.section-6-para {
    font-size: 16px;
    line-height: 1.8;
    margin-top: 30px;
}

.sec6-image-right {
    border-radius: 5px;
    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.5);
    transition: all 0.2s ease-in-out;
}

.sec6-image-right:hover {
    transform: scale(1.02);
}

.sec6-image-left {
    border-radius: 5px;
    box-shadow: -5px 10px 15px rgba(0, 0, 0, 0.5);
    transition: all 0.2s ease-in-out;
}

.sec6-image-left:hover {
    transform: scale(1.02);
}

.section-6-button {
    margin-top: 40px;
}

.sec6-btn {
    font-family: Roboto, sans-serif;
    color: #000000;
    letter-spacing: 2px;
    cursor: pointer;
}

.sec6-btn:hover {
    color: #000000;
    text-decoration: none;
}

.sec6-btn-see-all {
    font-family: Roboto, sans-serif;
    color: #FFFFFF;
    background-color: #000000;
    letter-spacing: 2px;
    padding: 10px 50px;
    margin-top: 40px;
    border: none;
    box-shadow: 3px 4px 2px rgba(0, 0, 0, 0.2);
    transition: all 0.5s ease;
}

.sec6-btn-see-all:hover {
    color: #000000;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
    transform: translateY(-5px);
}

.sec6-btn-see-all:active {
    transform: translateY(0px);
}

@media (max-width: 426px) {
    .section-6 {
        padding: 30px 0px 60px 0px;
    }

    .section-6-inner {
        width: 95%;
    }

    .section-6-heading {
        font-size: 28px;
    }

    .section-6-para {
        font-size: 14px;
        margin-top: 16px;
    }

    .section-6-button {
        margin-top: 25px;
    }

    .sec6-btn {
        font-size: 12px;
    }

    .sec6-btn-see-all {
        font-size: 12px;
        margin-top: 10px;
        padding: 5px 20px;
    }
}

@media (max-width: 320px) {
    .section-6 {
        padding: 10px 0px 40px 0px;
    }

    .section-6-heading {
        font-size: 23px;
    }

    .section-6-para {
        font-size: 12px;
    }

    .section-6-button {
        margin-top: 20px;
    }

    .sec6-btn {
        font-size: 10px;
    }

    .sec6-btn-see-all {
        font-size: 10px;
        margin-top: 0px;
        padding: 5px 15px;
    }
}

/* CONTACT */

.contact-heading {
    font-size: 62px;
    font-weight: bold;
}

.contact-para {
    font-size: 18px;
    letter-spacing: 4px;
    margin-top: 10px;
}

.card-row-1,
.card-row-2 {
    padding: 30px 50px;
}

.custom-card {
    padding: 0px 15px;
    border: none !important;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
}

.card-body {
    padding: 30px 0px !important;
}

.card-circle {
    width: 100px;
    height: 100px;
    background-color: #3E64FF;
    border-radius: 50%;
    margin: 10px auto;
    position: relative;
}

.card-circle-icon {
    font-size: 34px;
    color: #FFFFFF;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.card-heading {
    font-weight: bold;
    font-size: 20px;
}

.card-para {
    color: #666666;
    margin: 15px auto 0px auto;
}

.card-link {
    text-decoration: none;
}

.contact-image {
    background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)),
        url(../images/Contact-image-1.jpg);
    background-position: center;
    background-size: cover;
}

.contact-form-div {
    background-color: #F8F9FA;
    padding: 50px !important;
    font-family: Roboto, sans-serif;
}

#custom-input1,
#custom-input2,
#custom-input3 {
    color: #666666;
    letter-spacing: 2px;
    padding: 12px 15px;
}
/* ... */

